src/objects/GammaMobileAPI__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BaseURL__c</fullName>
        <label>BaseURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyURL__c</fullName>
        <label>CompanyURL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomainURL__c</fullName>
        <label>DomainURL</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MsisdnUrl__c</fullName>
        <label>MsisdnUrl</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PasswordHash__c</fullName>
        <label>PasswordHash</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceURL__c</fullName>
        <label>ServiceURL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsimURL__c</fullName>
        <label>UsimURL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GammaMobileAPI</label>
</CustomObject>